Applied fixed width and height to popovers to fix layout issue in Chrome for the data file image previews. Adjusted alignment of the publish status labels in the header, dataset pg, results table.

--- a/src/main/webapp/resources/css/structure.css
+++ b/src/main/webapp/resources/css/structure.css
@@ -52,6 +52,7 @@ button.btn.dropdown-toggle span.glyphicon {margin-right:.3em;}
 #dataverseHeader .dataverseHeaderCell {display:table-cell;}
 #dataverseHeader .dataverseHeaderLogo {text-align:center;}
 #dataverseHeader .dataverseHeaderName {padding:2em 1em;}
+#dataverseHeader .dataverseHeaderName span.label.label-danger {vertical-align:text-top; line-height: normal; margin-left:1em;}
 #dataverseHeader .dataverseHeaderTagline {padding-left:2em; font-size:1.3em;}
 #dataverseHeader .dataverseHeaderLink {padding-left:2em;}
 
@@ -108,7 +109,7 @@ table.ui-selectmanycheckbox.metadata-blocks-select label.ui-state-disabled {back
 
 span.search-term-match {font-weight: bold;}
 div[id$='resultsTable'] div.ui-datatable-tablewrapper table td > div {clear:left; margin-bottom: .5em;}
-div[id$='resultsTable'] div.ui-datatable-tablewrapper table td > div > span.label {margin-left:.5em;}
+div[id$='resultsTable'] div.ui-datatable-tablewrapper table td > div > span.label {vertical-align:text-top; line-height: normal; margin-left:.5em;}
 div[id$='resultsTable'] .resultDatasetCitationBlock {display:block;margin:4px 0 .5em 60px;background:#FCFCE2;padding:4px;}
 div[id$='resultsTable'] .resultDatasetCitationBlock span.search-term-match {font-weight: normal;}
 
@@ -201,7 +202,8 @@ div.form-group .glyphicon.glyphicon-asterisk {font-size:.5em; vertical-align:tex
 
 .btn-sm.ui-button {padding: 5px 10px;}
 
-#content div.popover {max-width: 600px;}
+div.popover.fade.top.in {max-width: none;}
+div.popover.fade.top.in div.popover-content {text-align:center; vertical-align: middle; display:table-cell; width:428px; height:418px;}
 
 div[id$="filesTable"] .ui-datatable-tablewrapper thead {display:none;}
 div[id$="versionsTable"] .ui-datatable-tablewrapper thead {display:none;}
